Corrected projects acronyms in fp7 and h2020 datasets.

--- a/EU.ipynb
+++ b/EU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 23.3 s, sys: 145 ms, total: 23.5 s\n",
-      "Wall time: 23.5 s\n"
+      "CPU times: user 21.9 s, sys: 104 ms, total: 22 s\n",
+      "Wall time: 22 s\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,12 +170,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Some project acronyms are not consistent in their writing (lower case), so we force upper case writing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp7_proj[\"projectAcronym\"] = fp7_proj[\"projectAcronym\"].str.upper()\n",
+    "fp7_part[\"projectAcronym\"] = fp7_part[\"projectAcronym\"].str.upper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So, let's merge these two datasets and create the `fp7` dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +213,7 @@
        "((25778, 21), (146021, 23), (146021, 41))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.83 s, sys: 24 ms, total: 6.85 s\n",
-      "Wall time: 6.85 s\n"
+      "CPU times: user 6.42 s, sys: 28 ms, total: 6.45 s\n",
+      "Wall time: 6.45 s\n"
      ]
     }
    ],
@@ -318,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,33 +364,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Two projects with projectRCN have non-consistent project acronyms, so let's force them to the same writing:\n",
+    "* projectRCN = 208306\n",
+    "* projectRCN = 194607"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h2020_part.loc[h2020_part.projectRCN.eq(208306)] =\\\n",
+    "    h2020_proj.loc[h2020_proj.projectRCN.eq(208306)].projectAcronym[0]\n",
+    "h2020_part.loc[h2020_part.projectRCN.eq(194607)] =\\\n",
+    "    h2020_proj.loc[h2020_proj.projectRCN.eq(194607)].projectAcronym[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So, let's merge these two datasets and create the `h2020` dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "h2020 = h2020_proj.merge(\n",
     "    h2020_part,\n",
-    "    on=[\"projectRCN\", \"projectID\"]\n",
+    "    on=[\"projectRCN\", \"projectID\", \"projectAcronym\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((14837, 21), (71312, 23), (62506, 42))"
+       "((14837, 21), (71312, 23), (62495, 41))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,172 +424,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are projects whith the same RCN and ID, but with difference project acronyms. So let's find who they are:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>projectRCN</th>\n",
-       "      <th>projectID</th>\n",
-       "      <th>topics</th>\n",
-       "      <th>projectAcronym_x</th>\n",
-       "      <th>projectAcronym_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>31485</th>\n",
-       "      <td>208306</td>\n",
-       "      <td>724846</td>\n",
-       "      <td>ERC-2016-COG</td>\n",
-       "      <td>321</td>\n",
-       "      <td>321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31486</th>\n",
-       "      <td>208306</td>\n",
-       "      <td>724846</td>\n",
-       "      <td>ERC-2016-COG</td>\n",
-       "      <td>321</td>\n",
-       "      <td>321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56230</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56231</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56232</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56233</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56234</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56235</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56236</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56237</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56238</th>\n",
-       "      <td>194607</td>\n",
-       "      <td>649660</td>\n",
-       "      <td>EE-10-2014</td>\n",
-       "      <td>Save at  Work</td>\n",
-       "      <td>Save at Work</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       projectRCN  projectID        topics projectAcronym_x projectAcronym_y\n",
-       "31485      208306     724846  ERC-2016-COG              321              321\n",
-       "31486      208306     724846  ERC-2016-COG              321              321\n",
-       "56230      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56231      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56232      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56233      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56234      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56235      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56236      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56237      194607     649660    EE-10-2014    Save at  Work     Save at Work\n",
-       "56238      194607     649660    EE-10-2014    Save at  Work     Save at Work"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h2020.loc[\n",
-    "    h2020.projectAcronym_x.ne(h2020.projectAcronym_y),\n",
-    "    [\"projectRCN\",\"projectID\",\"topics\",\"projectAcronym_x\",\"projectAcronym_y\"]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We can see from the fusion that not every project record number has found its corresponding record number in the other dataset. We find indeed 8806 project record numbers (projectRCN) in the `h2020_part` dataset that are _not_ matched in the `h2020_proj` dataset, which is exactly the difference between the size of `h2020_part` and `h2020`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +448,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['projectAcronym_x', 'projectAcronym_y'], dtype='object')"
+       "Index([], dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,6 +492,20 @@
    "source": [
     "h2020.columns.difference(fp7.columns)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we see that both datasets, `fp7` and `h2020`have the same set of columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
