Cleaned international organisations in Switzerland, added references.

--- a/EU.ipynb
+++ b/EU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.9 s, sys: 104 ms, total: 22 s\n",
-      "Wall time: 22 s\n"
+      "CPU times: user 23.2 s, sys: 139 ms, total: 23.3 s\n",
+      "Wall time: 23.3 s\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "((25778, 21), (146021, 23), (146021, 41))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.42 s, sys: 28 ms, total: 6.45 s\n",
-      "Wall time: 6.45 s\n"
+      "CPU times: user 6.81 s, sys: 16.1 ms, total: 6.83 s\n",
+      "Wall time: 6.83 s\n"
      ]
     }
    ],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "((14837, 21), (71312, 23), (62495, 41))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,11 +501,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Swiss participations in FP7\n",
+    "\n",
+    "#### Reference\n",
+    "We compare our analysis to the official figures provided by the Swiss Confederation (State Secretariat for Education, Research and Innovation):\n",
+    "\n",
+    "Source: [Swiss Participation in European Research Framework Programmes](https://www.sbfi.admin.ch/dam/sbfi/en/dokumente/2016/01/beteiligung_der_schweizandeneuropaeischenforschungsrahmenprogram.pdf.download.pdf/swiss_participationineuropeanresearchframeworkprogrammes.pdf)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fp7 dataset column headers:\n",
+      "- projectRCN\n",
+      "- projectID\n",
+      "- projectAcronym\n",
+      "- status\n",
+      "- programme\n",
+      "- topics\n",
+      "- frameworkProgramme\n",
+      "- title\n",
+      "- startDate\n",
+      "- endDate\n",
+      "- projectUrl\n",
+      "- objective\n",
+      "- totalCost\n",
+      "- ecMaxContribution\n",
+      "- call\n",
+      "- fundingScheme\n",
+      "- coordinator\n",
+      "- coordinatorCountry\n",
+      "- participants\n",
+      "- participantCountries\n",
+      "- subjects\n",
+      "- role\n",
+      "- organizationID\n",
+      "- organizationName\n",
+      "- shortName\n",
+      "- activityType\n",
+      "- endOfParticipation\n",
+      "- ecContribution\n",
+      "- country\n",
+      "- street\n",
+      "- city\n",
+      "- postCode\n",
+      "- organizationUrl\n",
+      "- contactType\n",
+      "- contactTitle\n",
+      "- contactFirstNames\n",
+      "- contactLastNames\n",
+      "- contactFunction\n",
+      "- contactTelephoneNumber\n",
+      "- contactFaxNumber\n",
+      "- contactEmail\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\n",
+    "    \"fp7 dataset column headers:\\n- \" + \\\n",
+    "    \"\\n- \".join(fp7.columns)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### International organisations in Switzerland\n",
+    "\n",
+    "Extract the data for Switzerland, but without the following international organisations that are counted for Switzerland by the European Commission. We consider in this statistics:\n",
+    "\n",
+    "- Organisation météorologique mondiale: WMO\n",
+    "- United Nations International Strategy for Disaster Reduction: UNISDR\n",
+    "- International Organization for Migration: IOM\n",
+    "- European Organization for Nuclear Research: CERN\n",
+    "- World Health Organization: FT\n",
+    "- Union International pour la Conservation de la Nature et de ses Ressources: IUCN\n",
+    "- International Centre for Trade and Sustainable Development: ICTSD\n",
+    "- European Society of Intensive Care Medecine: ESICM\n",
+    "- United Nations Institute for Training and Research: UNITAR\n",
+    "- Worl Heart Federation: WHF\n",
+    "- Quaker United Nations Office, Geneva: \n",
+    "- Council on Health Research for Development Association: COHRED\n",
+    "- Union Européenne de Radio Télévision: EBU\n",
+    "- European Molecular Biology Organization: EMBO, which is sometimes located by the European Commission in Switzerland (Geneva)\n",
+    "- European Society for Medical Oncology: ESMO\n",
+    "- International Telecommunication Union: ITU\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Participations of international organisations in Switzerland:\n",
+      "\n",
+      "        Part in FP7  FP7 Funding M€  Part in H2020  H2020 Funding M€\n",
+      "CERN          115.0      126.864954           52.0         37.340125\n",
+      "COHRED          4.0        1.170203            1.0          0.000000\n",
+      "EBU            10.0        2.552620            2.0          0.414555\n",
+      "EMBO            4.0       24.473964            0.0          0.000000\n",
+      "ESICM           1.0        0.232286            0.0          0.000000\n",
+      "ESMO            1.0        0.057780            0.0          0.000000\n",
+      "FT             44.0       11.902131           10.0          4.733969\n",
+      "ICTSD           1.0        0.141800            0.0          0.000000\n",
+      "IOM            60.0       15.432281            5.0          1.711823\n",
+      "ITU            59.0       12.472875           21.0          8.208944\n",
+      "IUCN            9.0        1.760355            4.0          1.000287\n",
+      "QUNO            1.0        0.314835            0.0          0.000000\n",
+      "UNISDR          1.0        0.291822            0.0          0.000000\n",
+      "UNITAR          3.0        1.137856            1.0          0.080250\n",
+      "WHF             1.0        0.029555            0.0          0.000000\n",
+      "WMO             8.0        1.232381            3.0          1.001250\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of international organisations located in Switzerland (short names)\n",
+    "international_orgs_in_CH = [\n",
+    "    \"WMO\",\"UNISDR\",\"IOM\", \"ITU\", # in 'PUB'\n",
+    "    \"CERN\", \"FT\", \"IUCN\", \"ICTSD\", \"ESICM\", \"UNITAR\", # in 'REC'\n",
+    "    \"WHF\", \"QUNO\", \"COHRED\", \"EBU\", \"EMBO\", \"ESMO\", # in 'OTH'\n",
+    "]\n",
+    "international_orgs_in_CH.sort()\n",
+    "\n",
+    "print (\"Participations of international organisations in Switzerland:\\n\")\n",
+    "\n",
+    "orgs_ch = pd.DataFrame (index = international_orgs_in_CH)\n",
+    "\n",
+    "for org in orgs_ch.index:\n",
+    "    orgs_ch.loc[org,\"Part in FP7\"] = fp7.loc[fp7['shortName'] == org].shape[0]\n",
+    "    orgs_ch.loc[org,\"FP7 Funding M€\"] = fp7.loc[\n",
+    "        fp7['shortName'] == org,\n",
+    "        \"ecContribution\"\n",
+    "    ].sum()/1000000\n",
+    "    orgs_ch.loc[org,\"Part in H2020\"] = h2020.loc[\n",
+    "        h2020['shortName'] == org\n",
+    "    ].shape[0]\n",
+    "    orgs_ch.loc[org,\"H2020 Funding M€\"] = h2020.loc[\n",
+    "        h2020['shortName'] == org,\n",
+    "        \"ecContribution\"\n",
+    "    ].sum()/1000000\n",
+    "print(orgs_ch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Swiss participations in FP7\n",
+    "\n",
+    "We select all participations where the country of the organisation's address is set to Switzerland, but where the organisation in not in the list of the international organisations listed above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ch_all = fp7.loc[(fp7['country'] == 'CH')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Comment on the code:**\n",
+    "`~fp7['shortName'].isin(international_orgs_in_CH` identifies all rows in fp7 whose org_shortName is not in the list of international organisations in Switzerland."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correction by removing the international organisations in Switzerland\n",
+    "ch = fp7.loc[\n",
+    "    (fp7['country'] == 'CH') & (\n",
+    "        # We exclude here all international organisations located in\n",
+    "        # Switzerland, see list above.\n",
+    "        # \"~\" with \".isin\" implements a de facto \"is not in\"\n",
+    "        ~fp7['shortName'].isin(international_orgs_in_CH)\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "# Coordinations\n",
+    "# org_role == \"hostInstitution\" is taken as coordinator for ERC\n",
+    "# beneficiaries\n",
+    "fp7_coord = (\n",
+    "    (fp7['role'] == \"coordinator\") | (fp7['role'] == \"beneficiary\")\n",
+    ").sum()\n",
+    "ch_coord  = (\n",
+    "    (ch['role'] == \"coordinator\") |\n",
+    "    (ch['role'] == \"beneficiary\") |\n",
+    "    (ch['role'] == \"hostInstitution\")\n",
+    ").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General statistics:\n",
+      "Total participations in FP7:  146021\n",
+      "Total coordinations in FP7:    22816\n",
+      "Total financial contributions in FP7: M€ 52308.999\n",
+      "\n",
+      "Swiss participations in FP7:\n",
+      "Number of Swiss participations:  4726\n",
+      "Proportion of Swiss participations: 3.24%\n",
+      "\n",
+      "Swiss coordinations:\n",
+      "Number of Swiss coordinations:  1378\n",
+      "Proportion of Swiss coordinations: 6.04%\n",
+      "\n",
+      "Financial contributions to Switzerland:\n",
+      "Amount received: M€  2436.137\n",
+      "Proportion of funding to Switzerland: 4.66%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# General participation\n",
+    "print (\"General statistics:\")\n",
+    "print (\"Total participations in FP7: {:7d}\".format(fp7.shape[0]))\n",
+    "print (\"Total coordinations in FP7:  {:7d}\".format(fp7_coord))\n",
+    "print (\n",
+    "    \"Total financial contributions in FP7: M€{:10.3f}\".format(\n",
+    "        fp7[\"ecContribution\"].sum()/1000000\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Participations\n",
+    "print (\"\\nSwiss participations in FP7:\")\n",
+    "print (\"Number of Swiss participations: {:5d}\".format(ch.shape[0]))\n",
+    "print (\"Proportion of Swiss participations: {:4.2f}%\".format(\n",
+    "    ch.shape[0]/fp7.shape[0]*100)\n",
+    ")\n",
+    "\n",
+    "# Coordinations\n",
+    "print (\"\\nSwiss coordinations:\")\n",
+    "print (\"Number of Swiss coordinations: {:5d}\".format(ch_coord))\n",
+    "print (\"Proportion of Swiss coordinations: {:4.2f}%\".format(\n",
+    "    ch_coord/fp7_coord*100)\n",
+    ")\n",
+    "\n",
+    "# Financial contributions\n",
+    "print (\"\\nFinancial contributions to Switzerland:\")\n",
+    "print (\"Amount received: M€{a:10.3f}\".format(\n",
+    "    a=ch[\"ecContribution\"].sum()/1000000)\n",
+    ")\n",
+    "print (\"Proportion of funding to Switzerland: {:4.2f}%\".format(\n",
+    "    ch[\"ecContribution\"].sum()/fp7[\"ecContribution\"].sum()*100)\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
